--- a/src/components/employeePage/personalPage.module.css
+++ b/src/components/employeePage/personalPage.module.css
@@ -6,24 +6,21 @@
  * 
  * 
  * To-Do: 
- *  Remove all borders
  *  Make the arrow icon be at the right of the module
- *  Make stemplingshistorikk wider than the other modules 
  *   - Header text responsiveness
- *  Fix the text in the month container
  */
 
 /* Google fonts Public Sans & Lato*/
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-/* */
 
 .personalPageContainer {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 2.5rem;
+  padding: 2.3rem;
+  padding-bottom: 0.5rem;
 }
 
 /* Outer for modules container */
@@ -31,7 +28,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 100%;
+  overflow-y: auto;
 }
 
 /* ==========================================================================
@@ -96,15 +93,6 @@
   margin-bottom: 0.2em;
 }
 
-/* Container for content inside modules, below the header and seperator. */
-.moduleContent {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-  flex-grow: 1;
-  overflow: auto;
-}
-
 /* ==========================================================================
    Styles for modules ShiftList and PunchClock
    ========================================================================== */
@@ -114,21 +102,27 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  flex-grow: 1;
+  height: 100%;
 }
 
 .module {
   display: flex;
-  flex-direction: column;
   height: 100%;
-  width: 100%;
+  flex-direction: column;
   border-radius: 0.5em;
-  margin-top: 1.6rem;
   background-color: #FFFFFF;
   box-shadow: 2px 3px 5px 1px #e0dada;
+  margin-bottom: 2rem;
 }
 
+/* Container for content inside modules, below the header and seperator. */
+.moduleContent {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  height: 100%;
+  overflow: auto;
+}
 
 /* ShiftList: Vaktliste
    ========================================================================== */
@@ -160,17 +154,23 @@
    Clock History layout: Stemplingshistorikk
    ========================================================================== */
 
+.outerClockHistoryContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin-left: 1.5rem;
+}
+
 .clockHistoryContainer {
+  margin-left: 1.5rem;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-height: 82vh;
+  flex-grow: 1;
   background-color: #FFFFFF;
-  margin-left: 1.5rem;
-  margin-top: 1.5rem;
   border-radius: 0.5em;
-  box-shadow: 2px 3px 5px 1px #e0dada;
-  overflow: hidden;
+  box-shadow: 3px 5px 5px 1px #e0dada;
+  padding: 1em;
+  margin-bottom: 2rem;
 }
 
 .clockHistoryIcon {
