--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -19,8 +19,9 @@
     display: flex;
     background-color: #FCFCFC;
     /* Take up all available space, but dont exceed 67% of the viewport*/
-    max-width: 67vw;
-    flex-grow: 1;
+    width: 67vw;
+    height: 100%;
+    margin: 0;
     /* Grow automatically to take up any remaining space*/
     /* Rounded edges only on left side */
     border-top-left-radius: 3rem;
